# hashcode-2021

./: .gitignore  run_solution.sh
cpp/: CMakeLists.txt
cpp/include/: game.hpp  scoring.hpp  solution.hpp
cpp/src/: game.cpp  io.cpp  main.cpp  scoring.cpp
cpp/src/solutions/: easy_solution.cpp  easy_solution2.cpp  iteration_solution.cpp  super_random.cpp
output/easy_10/: a.txt  b.txt  c.txt  d.txt  e.txt  f.txt
output/easy_11/: b.txt  c.txt  d.txt  e.txt  f.txt
output/easy_2/: a.txt  b.txt  c.txt  d.txt  e.txt  f.txt
output/easy_4/: a.txt  b.txt  c.txt  d.txt  e.txt  f.txt
output/easy_5/: b.txt  c.txt  f.txt
output/easy_6/: a.txt  d.txt  e.txt
output/easy_7/: a.txt  b.txt  c.txt  d.txt  e.txt  f.txt
output/easy_8/: a.txt  b.txt  c.txt  d.txt  e.txt  f.txt
output/easy_9/: a.txt  b.txt  c.txt  d.txt  e.txt  f.txt
py/: scoring.py
